# network

./: .env  Cargo.toml  chema.txt  demo.rs
crates/communities/: .env  Cargo.toml
crates/communities/migrations/2022-11-17-133149_1/: up.sql
crates/communities/migrations/2022-12-20-125031_1/: up.sql
crates/communities/src/: errors.rs  main.rs  routes.rs  schema.rs
crates/communities/src/models/: community.rs  lists.rs  mod.rs  moderation.rs  user.rs
crates/communities/src/models/sql/: communities.sql
crates/communities/src/utils/: community.rs  crypto.rs  mod.rs
crates/communities/src/views/: manager_progs.rs  mod.rs  owner_progs.rs  pages.rs  progs.rs  settings.rs  user_progs.rs
crates/front/: Cargo.toml  index.html  trunk.toml
crates/front/src/: errors.rs  main.rs  routes.rs
crates/front/src/utils/: error_to_str.rs  mod.rs  not_found.rs  proxy.rs  requests.rs  reqwest.rs
crates/front/src/views/: auth.rs  mod.rs  pages.rs  users.rs
crates/front/static/scripts/: anon.js  anon_load.js  app.js  chart_v1.js  get.js  lib.js  load.js  manager.js
crates/front/static/scripts/community/: get.js  manage.js  post.js
crates/front/static/scripts/csv/: en.csv  en2.csv  rus.csv  rus2.csv
crates/front/static/scripts/docs/: get.js  post.js
crates/front/static/scripts/functions/: audio_video.js  comment_attach.js  message_attach.js  other.js  post_attach.js  preview.js  reload.js  socket.js
crates/front/static/scripts/gallery/: user_get.js  user_post.js
crates/front/static/scripts/goods/: user_get.js  user_post.js
crates/front/static/scripts/lib/: _video.js  dragula.js  music_player.js  plugin_for_player_1.js  tweenlite.js  video_init.js  video_player.js  websocketbridge.js
crates/front/static/scripts/music/: get.js  post.js
crates/front/static/scripts/posts/: user_get.js  user_post.js
crates/front/static/scripts/survey/: get.js  post.js
crates/front/static/scripts/user/: chat.js  connect.js  settings.js
crates/front/static/scripts/video/: user_get.js  user_post.js
crates/front/static/styles/: analog.css  bootstrap.min.css  default.css  video.css
crates/front/static/styles/color/: blue.css  brown.css  c.css  dark.css  dark_blue.css  dark_maroon.css  dark_pink.css  f.css  g.css  grey.css  orange.css  purple.css  red.css  skyblue.css  steal.css  white.css
crates/front/templates/base_block/: anon_base_footer.stpl  anon_base_header.stpl  anon_base_mobile_footer.stpl  anon_base_mobile_header.stpl  anon_desctop_nav.stpl  audio_playlist.stpl  base_footer.stpl  base_header.stpl  base_mobile_footer.stpl  base_mobile_header.stpl  desctop_nav.stpl  navbar.stpl
crates/front/templates/base_block/close/: close_item.stpl  close_list.stpl
crates/front/templates/base_block/perm/: community_drops.stpl  create_community_list_comment_perm.stpl  create_community_list_perm.stpl  create_reactions.stpl  create_user_list_comment_perm.stpl  create_user_list_perm.stpl  edit_community_list_comment_perm.stpl  edit_community_list_perm.stpl  edit_reactions.stpl  edit_user_list_comment_perm.stpl  edit_user_list_perm.stpl  user_drops.stpl
crates/front/templates/desctop/: anon_desctop_nav.stpl  anon_footer.stpl  anon_header.stpl  desctop_nav.stpl  footer.stpl  header.stpl  navbar.stpl
crates/front/templates/desctop/generic/: anon_empty_page.stpl  anon_first_load.stpl  empty_page.stpl  first_load.stpl
crates/front/templates/desctop/generic/user/: card_send_message.stpl
crates/front/templates/mobile/: anon_footer.stpl  anon_header.stpl  footer.stpl  header.stpl
crates/front/templates/mobile/generic/: anon_first_load.stpl  first_load.stpl
crates/front/templates/mobile/main/: menu.stpl
crates/photo_files/: Cargo.toml
crates/photo_files/src/: main.rs
crates/photo_files/src/utils/: forms.rs  mod.rs
crates/photo_files_2/: Cargo.toml
crates/photo_files_2/src/: main.rs
crates/photos/: .env  Cargo.toml
crates/photos/migrations/2022-10-27-071559_items/: up.sql
crates/photos/migrations/2022-12-20-133809_1/: up.sql
crates/photos/src/: main.rs  routes.rs  schema.rs
crates/photos/src/models/: comments.rs  community.rs  items.rs  lists.rs  mod.rs  moderation.rs  other.rs  photos.rs  user.rs
crates/photos/src/models/sql/: items.sql  photos.sql
crates/photos/src/utils/: attach_items.rs  items.rs  mod.rs  proxy.rs
crates/photos/src/views/: comment_progs.rs  demo.rs  item_progs.rs  list_progs.rs  manager_progs.rs  owner_progs.rs  pages.rs
crates/posts/: .env  Cargo.toml
crates/posts/migrations/2022-11-20-190153_1/: up.sql
crates/posts/migrations/2022-11-20-190217_2/: up.sql
crates/posts/migrations/2022-11-20-190232_3/: up.sql
crates/posts/migrations/2022-11-21-174817_4/: up.sql
crates/posts/migrations/2022-12-20-130250_1/: up.sql
crates/posts/src/: errors.rs  main.rs  routes.rs  schema.rs
crates/posts/src/models/: comments.rs  community.rs  items.rs  lists.rs  mod.rs  moderation.rs  other.rs  posts.rs  user.rs
crates/posts/src/models/sql/: items.sql  moderation.sql  posts.sql
crates/posts/src/utils/: attach_items.rs  items.rs  mod.rs
crates/posts/src/views/: comment_progs.rs  demo.rs  item_progs.rs  list_progs.rs  manager_progs.rs  mod.rs  owner_progs.rs  pages.rs  progs.rs
crates/posts/src/views copy/: comment_progs.rs  item_progs.rs  manager_progs.rs  pages.rs
crates/users/: .env  Cargo.toml
crates/users/migrations/2022-11-26-063306_1/: up.sql
crates/users/migrations/2022-11-26-084748_2/: up.sql
crates/users/migrations/2022-12-20-084824_1/: up.sql
crates/users/src/: errors.rs  main.rs  routes.rs  schema.rs
crates/users/src/config/: crypto.rs
crates/users/src/handlers/: auth_handlers.rs  mod.rs  user_handlers.rs
crates/users/src/models/: lists.rs  mod.rs  moderation.rs  other.rs  user.rs
crates/users/src/models/sql/: users.sql
crates/users/src/repositories/: mod.rs  user_repository.rs
crates/users/src/utils/: auth.rs  crypto.rs  lists.rs  mod.rs  profile.rs  settings.rs
crates/users/src/views/: auth.rs  load_pages.rs  manager_progs.rs  mod.rs  owner_progs.rs  pages.rs  progs.rs  settings.rs
src/: schema.rs
(+52 files in other folders)
