[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.1"
actix-files = "0.6"
actix-session = "0.5"
actix-identity = "0.5.2"
actix-redis = "0.10"
reqwest = "0.11.13"
cookie = "0.16.2"
env_logger = "0.9.0"
actix-web-httpauth = "0.6.0"
bcrypt = "0.12.1"
jsonwebtoken = "8.1.0"
derive_more = "0.99.5"
sailfish = "0.4.0"
sailfish-macros = "0.4.0"
log = "0.4.16"