[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.1"
actix-files = "0.6"
reqwest = { version = "0.11.10", features = ["json"] }
env_logger = "0.9.0"
derive_more = "0.99.5"
sailfish = "0.4.0"
sailfish-macros = "0.4.0"
log = "0.4.16"
web-local-storage-api = "*"
awc = { version = "3", features = ["rustls"] }
clap = { version = "3", features = ["derive"] }