[package]
name = "photo_files_2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.1"
actix-files = "0.6"
actix-multipart = "0.4.0-beta.12" 
actix-form-data = "0.6.2"
futures = "0.3.5"
derive_more = "0.99.5"
image-convert = "0.12.1"
reqwest = "0.11.13"


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]