[package]
name = "photos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "serde_json"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
actix-cors = "0.6.1"
derive_more = "0.99.5"
actix-rt = "^1.1.1"
awc = { version = "3", features = ["rustls"] }
clap = { version = "3", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
actix-multipart = "0.4.0-beta.12" 
bcrypt = "0.12.1"
jsonwebtoken = "8.1.0"