[package]
name = "posts"
version = "0.1.0"
edition = "2022"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.21"
actix-cors = "0.6.1"
derive_more = "0.99.5"
