[package]
name = "users"
version = "1.0.0"
edition = "2021"


[dependencies]
actix-web = "4"
#actix-files = "0.6"
#actix-session = "0.5"
actix-redis = "0.10"
#native-tls = "0.2.4"
serde = "1.0"
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.21"
actix-cors = "0.6.1"
actix-web-httpauth = "0.6.0"
bcrypt = "0.12.1"
jsonwebtoken = "8.1.0"
reqwest = "*"
derive_more = "0.99.5"
#concat-string = "1.0.1"
#cookie = "*"
